# stacksmith

./: .gitignore  Dockerfile.deps  Jenkinsfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: stacksmith-apply.yml  stacksmith-gitops-opinionated-reusable.yml  stacksmith-gitops-reusable.yml  stacksmith-plan.yml
examples/: README.md
examples/github-actions/: stacksmith-apply.yml  stacksmith-operation.yml  stacksmith-plan.yml
examples/gitops-repo/: README.md  run-act-workflow.sh
examples/gitops-repo/common/: stacksmith.yaml
examples/gitops-repo/environments/: dev.yaml  prod.yaml
examples/gitops-repo/environments/dev/: stacksmith.yaml
examples/gitops-repo/environments/prod/: stacksmith.yaml
examples/gitops-repo/manifests/common/: frontend-values.yaml  platform-base.stack.yaml  platform-tags.stack.yaml  platform.stack.yaml  service.stack.yaml
examples/gitops-repo/manifests/environments/dev/: app-config.yaml  service.stack.yaml
examples/gitops-repo/vars/: vars.dev.yaml  vars.prod.yaml
examples/gitops-simple-repo/: README.md
examples/gitops-simple-repo/common/: stacksmith.yaml
examples/gitops-simple-repo/manifests/common/: iam.stack.yaml  null-resources.stack.yaml
examples/gitops-simple-repo/vars/: vars.common.yaml  vars.dev.yaml  vars.prod.yaml
examples/modules/: README.md
examples/modules/command_runner/: main.tf  outputs.tf  variables.tf
examples/modules/helm_app/: README.md  main.tf  variables.tf
examples/modules/jenkins_build/: main.tf  outputs.tf  trigger_build.py  variables.tf
examples/modules/kubernetes_app/: README.md  main.tf  variables.tf
examples/modules/null_resource/: README.md  outputs.tf  variables.tf
examples/shared-config-repo/: null-resource-config.yaml  stacksmith-config.yaml
examples/shared-config-repo/scripts/providers/: aws_identity.py  configure_aws_secondary_provider.py
examples/shared-config-repo/scripts/transforms/: transform_bucket_name.py  transform_lifecycle_rules.py  transform_s3_write_policy.py  transform_security_group_ingress_rules.py  transform_tags.py
examples/shared-config-repo/scripts/validations/: validate_aws_region.py  validate_ec2_instance_type.py  validate_ec2_requires_imdsv2.py  validate_ec2_t3_micro_warning.py  validate_s3_no_public_access.py  validate_s3_write_policy_scope.py
examples/stack-repo/bucket-and-ec2/: stack.yaml  vars.dev.yaml
jenkins/: Jenkinsfile  README.md  stacksmith-helpers.groovy
scripts/: move_deps.sh  select_gitops_environments.py  update_cli_reference.py
src/stacksmith/: __init__.py  __main__.py  api.py  discovery.py  enums.py  exceptions.py  formatters.py  generator.py  gitops.py  inspector.py  introspection.py  loader.py  merging.py  models.py  module_mapping.py  operations.py  remote.py  runner.py  terragrunt.py  tooling.py  utils.py  validation.py  variables.py  vendor.py
src/stacksmith/assets/operation_runner/: jenkins.py  local.py  main.tf
src/stacksmith/cli/: args.py  main.py
src/stacksmith/generation/: __init__.py  providers.py
src/stacksmith/gitops/: __init__.py  changes.py  contracts.py  selection.py
src/stacksmith/schemas/: config.schema.json  runfile.schema.json  stack.schema.json
src/stacksmith/validations/: __init__.py  outcomes.py  summarize.py
tests/: conftest.py  test_api_targeting.py  test_automation.py  test_ci_api.py  test_cli.py  test_discovery.py  test_docs.py  test_example_scripts.py  test_example_validations.py  test_formatters.py  test_generator.py  test_gitops.py  test_inputs.py  test_inspector.py  test_introspection.py  test_jenkins_build_module.py  test_loader.py  test_merging.py  test_models.py  test_module_mapping.py  test_operations.py  test_remote.py  test_runner.py  test_schema_sync.py  test_terragrunt.py  test_tooling.py  test_utils.py  test_validation.py  test_vendor.py
tests/fixtures/: sample_config.yaml  sample_config_local.yaml  sample_stack.json  sample_stack.yaml  sample_values.yaml
tests/fixtures/monorepo/compute/web/: stack.yaml
(+4 files in other folders)
