[project]
name = "stacksmith"
description = "YAML/JSON-driven OpenTofu wrapper with Terragrunt orchestration"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [{ name = "ci-sourcerer" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "deepmerge (>=2.0,<3.0)",
    "packaging (>=26.2,<27.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.33.1,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "python-hcl2 (>=8.1.2,<9.0.0)",
    "jmespath (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]
dynamic = ["version"]

[tool.poe]
include_script = "common_python_tasks:tasks(exclude_tags=['fastapi'])"

[tool.poe.env]
CONTAINER_ENV = "TF_PLUGIN_CACHE_DIR=/workspace/.stacksmith/providers STACKSMITH_TOOL_CACHE_DIR=/workspace/.stacksmith/.cache/tools"
CONTAINER_BUILD_ARGS = """
APT_PACKAGES="git jq"
"""
CONTAINER_DEPS_FILE = "Dockerfile.deps"
CONTAINER_DEPS_MOVE_SCRIPT_PATH = "scripts/move_deps.sh"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/stacksmith"]

[tool.hatch.build.targets.sdist]
include = ["src/stacksmith", "README.md", "LICENSE"]

[project.scripts]
stacksmith = "stacksmith.cli.main:main"

[dependency-groups]
debug = ["debugpy (>=1.8.16,<2.0.0)", "jmespath (>=1.1.0,<2.0.0)"]
dev = [
    "common-python-tasks>=0.5.1,<0.6.0",
    "boto3 (>=1.43.14,<2.0.0)",
    "botocore[crt] (>=1.43.15,<2.0.0)",
]

[build-system]
requires = ["hatchling>=1.27.0", "uv-dynamic-versioning>=0.14.0"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
style = "pep440"
dirty = true

[tool.uv]
package = true
